Optimisation la taille de l'image finale Docker
- Reduction de la taille par 3