@@ -3,7 +3,8 @@
 ################################## DEPENDANCES #################################
 
 # Créer une étape pour la résolution et le téléchargement des dépendances.
-FROM eclipse-temurin:21-jdk-jammy AS deps
+
+FROM eclipse-temurin:21-jdk-alpine AS dependances
 
 WORKDIR /build
 
@@ -17,6 +18,7 @@ COPY .mvn/ .mvn/
 RUN --mount=type=bind,source=pom.xml,target=pom.xml \
     --mount=type=cache,target=/root/.m2 ./mvnw dependency:go-offline -DskipTests
 
+
 #################################### PACKAGE ###################################
 
 # Créez une étape pour construire l'application basée sur l'étape avec les dépendances téléchargées.
@@ -26,15 +28,37 @@ RUN --mount=type=bind,source=pom.xml,target=pom.xml \
 # vous devrez mettre à jour cette étape avec le nom de fichier correct de votre paquetage
 # et mettre à jour l'image de base de l'étape « final » en utilisant le serveur d'application approprié,
 # par exemple en utilisant tomcat (https://hub.docker.com/_/tomcat/) comme image de base.
-FROM deps AS package
+
+FROM dependances AS package
 
 WORKDIR /build
 
 COPY ./src src/
+
 RUN --mount=type=bind,source=pom.xml,target=pom.xml \
     --mount=type=cache,target=/root/.m2 \
     ./mvnw package -DskipTests && \
     mv target/$(./mvnw help:evaluate -Dexpression=project.artifactId -q -DforceStdout)-$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout).jar target/app.jar
+
+
+################################## JDEPS ##################################
+
+# Créez une étape pour analyser et enregistrer les dépendances de classe Java de l'application jar,
+# basée sur l'étape de construction du package.
+# jdeps est un outil d'analyse des dépendances de classe (https://docs.oracle.com/en/java/javase/11/tools/jdeps.html)
+# La liste des dépendances de classes Java de l'application est enregistré dans un fichier nommée 'modules.txt'
+
+FROM package AS jdeps
+
+WORKDIR /build
+
+RUN jdeps --ignore-missing-deps -q \
+    --recursive \
+    --multi-release 21 \
+    --print-module-deps \
+    --class-path 'BOOT-INF/lib/*' \
+    target/app.jar > modules.txt
+
 
 ################################## EXTRACTION ##################################
 
@@ -42,11 +66,36 @@ RUN --mount=type=bind,source=pom.xml,target=pom.xml \
 # Profitez des outils de couche de Spring Boot et de la mise en cache de Docker en extrayant l'application packagée
 # en couches séparées qui peuvent être copiées dans l'étape finale. Voir la documentation de Spring pour référence :
 # https://docs.spring.io/spring-boot/docs/current/reference/html/container-images.html
+
 FROM package AS extract
 
 WORKDIR /build
 
 RUN java -Djarmode=layertools -jar target/app.jar extract --destination target/extracted
+
+
+################################## CUSTOM JRE ##################################
+
+# Créez une étape pour construire un Java Runtime Environment (JRE) personnalisé et allégé
+# jlink est l'outil java pour assembler et optimiser un ensemble de modules et leurs dépendances
+# dans une image d'exécution personnalisée. (https://docs.oracle.com/en/java/javase/11/tools/jlink.html)
+
+FROM eclipse-temurin:21-jdk-alpine AS jre-builder
+
+COPY --from=jdeps build/modules.txt ./modules.txt
+
+RUN apk update &&  \
+    apk add binutils
+
+RUN $JAVA_HOME/bin/jlink \
+         --verbose \
+         --add-modules $(cat modules.txt) \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /optimized-jre-21
+
 
 ##################################### FINAL ####################################
 
@@ -54,12 +103,16 @@ RUN java -Djarmode=layertools -jar target/app.jar extract --destination target/e
 # Cette étape utilise souvent une image de base différente de l'étape d'installation
 # ou de construction où les fichiers nécessaires sont copiés à partir de l'étape d'installation.
 #
-# L'exemple ci-dessous utilise l'image JRE d'eclipse-turmin comme base pour l'exécution de l'application.
-# En spécifiant la balise « 21-jre-jammy », il utilisera également la version la plus récente de cette balise
-# lorsque vous construirez votre fichier Docker.
 # Si la reproductibilité est importante, envisagez d'utiliser une SHA digest spécifique, comme
 # eclipse-temurin@sha256:99cede493dfd88720b610eb8077c8688d3cca50003d76d1d539b0efc8cca72b4.
-FROM eclipse-temurin:21-jre-jammy AS final
+
+FROM alpine:3 AS final
+
+ENV JAVA_HOME=/opt/jre/jre-21
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# Copier le JRE personalisé dans le dossier de java
+COPY --from=jre-builder /optimized-jre-21 $JAVA_HOME
 
 # Créer un utilisateur non privilégié sous lequel l'application s'exécutera.
 # https://docs.docker.com/go/dockerfile-user-best-practices/
@@ -72,6 +125,7 @@ RUN adduser \
     --no-create-home \
     --uid "${UID}" \
     appuser
+
 USER appuser
 
 # Copier l'exécutable à partir de l'étape « package ».
